--- a/app/src/main/res/drawable/bg_button_green_gradient.xml
+++ b/app/src/main/res/drawable/bg_button_green_gradient.xml
@@ -1,8 +1,11 @@
+<?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
+
     <gradient
-        android:startColor="#7B42F6"
-        android:endColor="#B01EFF"
-        android:angle="45" />
+        android:startColor="#43A047"
+    android:endColor="#66BB6A"
+    android:angle="45" />
+
     <corners android:radius="24dp" />
     <padding android:left="12dp" android:top="6dp" android:right="12dp" android:bottom="6dp" />
 </shape>
