--- a/app/src/main/res/drawable/bg_card.xml
+++ b/app/src/main/res/drawable/bg_card.xml
@@ -1,7 +1,5 @@
-<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-    <solid android:color="#FFFFFF" />
-    <corners android:radius="16dp"/>
-    <stroke android:color="#E0E0E0" android:width="1dp"/>
-    <padding android:left="8dp" android:top="8dp" android:right="8dp" android:bottom="8dp"/>
-    <shadowColor>#40000000</shadowColor>
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <solid android:color="#FFFFFF"/>
+    <corners android:radius="12dp"/>
+    <elevation android:value="4dp"/>
 </shape>
