--- a/app/src/main/res/layout/item_admin_booking.xml
+++ b/app/src/main/res/layout/item_admin_booking.xml
@@ -87,6 +87,16 @@
                 android:padding="6dp"
                 android:text="Huỷ"
                 android:textSize="12sp" />
+
+            <Button
+                android:id="@+id/btnDetail"
+                android:layout_width="match_parent"
+                android:layout_height="37dp"
+                android:padding="6dp"
+                android:text="Chi tiết"
+                android:textSize="12sp"
+                android:layout_marginTop="6dp" />
+
         </LinearLayout>
 
     </LinearLayout>
