--- a/app/src/main/res/layout/fragment_admin_manage_users.xml
+++ b/app/src/main/res/layout/fragment_admin_manage_users.xml
@@ -1,16 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:padding="16dp"
+    android:orientation="vertical"
+    android:background="#F1F5F9"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".fragment.admin.AdminManageUsersFragment">
+    android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Đây là Manage Users Fragment (cho Admin)"
-        android:textSize="20sp"
-        android:layout_gravity="center"
-        android:textStyle="bold" />
+    <EditText
+        android:id="@+id/edtSearchUser"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:layout_marginBottom="12dp"
+        android:background="@drawable/bg_search_box"
+        android:drawableStart="@android:drawable/ic_menu_search"
+        android:drawablePadding="8dp"
+        android:hint="Tìm kiếm người dùng..."
+        android:padding="12dp" />
 
-</FrameLayout>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvUsersAdmin"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"/>
+</LinearLayout>
